[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://colored_transparent_packed.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 4 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 452, 178, 8, 12 )

[node name="Bullet" type="Area2D" groups=[
"bullet",
]]
modulate = Color( 0.988235, 0.917647, 0.623529, 1 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = SubResource( 2 )

[node name="AfterHitTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="AfterHitTimer" to="." method="_on_AfterHitTimer_timeout"]
